fix deploy errors

--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -93,6 +93,147 @@
     "terms": "Όροι Χρήσης",
     "contact": "Επικοινωνία"
   },
+  "landing": {
+    "logo": "AI Comment Replyer",
+    "badge": "Διαχείριση Σχολίων με Τεχνητή Νοημοσύνη",
+    "titleLine1": "Μην Χάσετε Ποτέ",
+    "titleLine2": "Ένα Σχόλιο",
+    "subtitle": "Αυτοματοποιήστε τις απαντήσεις στα social media σας με AI που κατανοεί την επωνυμία σας. Απαντήστε σε σχόλια αμέσως, 24/7, με εξατομικευμένα μηνύματα που ακούγονται σαν εσάς.",
+    "startFreeTrial": "Ξεκινήστε Δωρεάν Δοκιμή",
+    "watchDemo": "Δείτε το Demo",
+    "stats": {
+      "automated": "Αυτόματες Απαντήσεις",
+      "saved": "Εξοικονόμηση/Εβδομάδα",
+      "consistent": "Συνέπεια Επωνυμίας"
+    },
+    "socialProof": {
+      "title": "Εμπιστεύονται Κορυφαίες Επωνυμίες"
+    },
+    "features": {
+      "title": "Όλα Όσα Χρειάζεστε",
+      "subtitle": "Ισχυρά χαρακτηριστικά σχεδιασμένα να εξοικονομήσουν χρόνο και να προστατέψουν τη φήμη της επωνυμίας σας",
+      "lightningFast": {
+        "title": "Αστραπιαία Ταχύτητα",
+        "description": "Απαντήστε σε σχόλια σε δευτερόλεπτα, όχι ώρες. Απαντήσεις με AI που ακούγονται φυσικές και ταιριαστές με την επωνυμία σας."
+      },
+      "brandSafe": {
+        "title": "Ασφαλές για την Επωνυμία",
+        "description": "Το προηγμένο AI διασφαλίζει ότι κάθε απάντηση ευθυγραμμίζεται με τη φωνή και τις αξίες της επωνυμίας σας. Πλήρης έλεγχος, μηδενικός κίνδυνος."
+      },
+      "customizable": {
+        "title": "Προσαρμοσμένο",
+        "description": "Ορίστε προσαρμοσμένους κανόνες, προτιμήσεις τόνου και πρότυπα απαντήσεων. Κάντε το να λειτουργεί ακριβώς όπως θέλετε."
+      },
+      "analytics": {
+        "title": "Πίνακας Αναλυτικών",
+        "description": "Παρακολουθήστε τους χρόνους απόκρισης, τα ποσοστά συμμετοχής και την ικανοποίηση των πελατών. Λάβετε αποφάσεις βασισμένες σε δεδομένα."
+      },
+      "monitoring": {
+        "title": "Παρακολούθηση 24/7",
+        "description": "Μην χάσετε ποτέ ένα σχόλιο, ακόμα και όταν κοιμάστε. Το AI μας λειτουργεί όλο το εικοσιτετράωρο για να διατηρήσει τους πελάτες απασχολημένους."
+      },
+      "security": {
+        "title": "Επιχειρηματική Ασφάλεια",
+        "description": "Κρυπτογράφηση από άκρο σε άκρο, συμμόρφωση με GDPR, πιστοποιημένο SOC 2. Τα δεδομένα σας προστατεύονται πάντα."
+      }
+    },
+    "metrics": {
+      "responseRate": "Ποσοστό Απόκρισης",
+      "commentsProcessed": "Επεξεργασμένα Σχόλια",
+      "avgResponseTime": "Μέσος Χρόνος Απόκρισης",
+      "uptimeSLA": "SLA Διαθεσιμότητας"
+    },
+    "pricing": {
+      "title": "Απλή, Διαφανής Τιμολόγηση",
+      "subtitle": "Επιλέξτε το πρόγραμμα που ταιριάζει στις ανάγκες σας. Όλα τα προγράμματα περιλαμβάνουν δωρεάν δοκιμή 14 ημερών.",
+      "mostPopular": "Πιο Δημοφιλές",
+      "starter": {
+        "name": "Starter",
+        "price": "$29",
+        "period": "/μήνα",
+        "feature1": "Έως 1,000 σχόλια/μήνα",
+        "feature2": "Βασικές απαντήσεις AI",
+        "feature3": "1 λογαριασμός social media",
+        "feature4": "Υποστήριξη email",
+        "cta": "Ξεκινήστε"
+      },
+      "pro": {
+        "name": "Pro",
+        "price": "$79",
+        "period": "/μήνα",
+        "feature1": "Έως 10,000 σχόλια/μήνα",
+        "feature2": "Προηγμένο AI με προσαρμοσμένους κανόνες",
+        "feature3": "Έως 5 λογαριασμοί social media",
+        "feature4": "Προτεραιότητα υποστήριξης",
+        "feature5": "Πίνακας αναλυτικών",
+        "cta": "Ξεκινήστε"
+      },
+      "enterprise": {
+        "name": "Enterprise",
+        "price": "Προσαρμοσμένο",
+        "feature1": "Απεριόριστα σχόλια",
+        "feature2": "Προσαρμοσμένη εκπαίδευση AI",
+        "feature3": "Απεριόριστοι λογαριασμοί",
+        "feature4": "Αφοσιωμένος διαχειριστής λογαριασμού",
+        "feature5": "Εγγύηση SLA",
+        "cta": "Επικοινωνία Πωλήσεων"
+      }
+    },
+    "testimonials": {
+      "title": "Αγαπημένο από Ομάδες Παγκοσμίως",
+      "subtitle": "Δείτε τι λένε οι πελάτες μας για την εμπειρία τους",
+      "testimonial1": {
+        "quote": "Αυτό το εργαλείο έχει μεταμορφώσει εντελώς τον τρόπο που χειριζόμαστε την αλληλεπίδραση με τους πελάτες. Οι χρόνοι απόκρισης μειώθηκαν από ώρες σε δευτερόλεπτα και τα σκορ ικανοποίησης των πελατών μας δεν έχουν ποτέ υψηλότερα.",
+        "name": "Σάρα Τζόνσον",
+        "role": "Διευθύντρια Marketing, TechCorp"
+      },
+      "testimonial2": {
+        "quote": "Ως μικρή ομάδα, δεν μπορούσαμε να αντέξουμε να χάσουμε σχόλια. Το AI Comment Replyer μας επιτρέπει να ανταγωνιζόμαστε πολύ μεγαλύτερες εταιρείες ανταποκρινόμενοι 24/7. Αλλαγή παιχνιδιού!",
+        "name": "Μάικλ Τσεν",
+        "role": "Ιδρυτής, StartupXYZ"
+      },
+      "testimonial3": {
+        "quote": "Οι προσαρμοσμένοι κανόνες και η εκπαίδευση φωνής επωνυμίας είναι απίθανοι. Κάθε απάντηση ακούγεται σαν να προήλθε από την ομάδα μας, αλλά έχουμε 10 φορές περισσότερη συμμετοχή. Συνιστάται ανεπιφύλακτα!",
+        "name": "Έμμα Ροδρίγκεζ",
+        "role": "Διαχειρίστρια Social Media, BrandCo"
+      }
+    },
+    "faq": {
+      "title": "Συχνές Ερωτήσεις",
+      "subtitle": "Όλα όσα χρειάζεστε να γνωρίζετε για το AI Comment Replyer",
+      "q1": "Πώς λειτουργεί η απάντηση AI σε σχόλια;",
+      "a1": "Το AI μας αναλύει τα εισερχόμενα σχόλια και δημιουργεί συνεπείς, ευθυγραμμισμένες με την επωνυμία απαντήσεις σε δευτερόλεπτα. Μπορείτε να προσαρμόσετε τον τόνο, το στυλ και να εγκρίνετε απαντήσεις πριν δημοσιευτούν.",
+      "q2": "Ποιες πλατφόρμες υποστηρίζετε;",
+      "a2": "Επί του παρόντος, υποστηρίζουμε Σελίδες Facebook και Instagram. Επεκτείνουμε συνεχώς σε άλλες πλατφόρμες social media βάσει της ζήτησης των χρηστών.",
+      "q3": "Είναι ασφαλή τα δεδομένα μου;",
+      "a3": "Απόλυτα. Χρησιμοποιούμε κρυπτογράφηση επιχειρηματικού επιπέδου, συμμορφωνόμαστε με τα πρότυπα GDPR και δεν κοινοποιούμε ποτέ τα δεδομένα σας σε τρίτους. Ο λογαριασμός και τα σχόλια σας προστατεύονται πλήρως.",
+      "q4": "Μπορώ να προσαρμόσω τις απαντήσεις AI;",
+      "a4": "Ναι! Μπορείτε να ορίσετε προσαρμοσμένους κανόνες, προτιμήσεις τόνου, πρότυπα απαντήσεων και ροές εργασίας έγκρισης. Το AI μαθαίνει από τη φωνή της επωνυμίας σας και βελτιώνεται με τον χρόνο.",
+      "q5": "Τι συμβαίνει αν το AI κάνει λάθος;",
+      "a5": "Όλες οι απαντήσεις μπορούν να οριστούν ώστε να απαιτούν χειροκίνητη έγκριση πριν από τη δημοσίευση. Μπορείτε επίσης να επεξεργαστείτε, να απορρίψετε ή να δώσετε σχόλια σε οποιαδήποτε παραγόμενη απάντηση για να βοηθήσετε το AI να μάθει."
+    },
+    "finalCta": {
+      "title": "Έτοιμοι να Ξεκινήσετε;",
+      "subtitle": "Γίνετε μέλος χιλιάδων επιχειρήσεων που αυτοματοποιούν τη διαχείριση σχολίων τους. Ξεκινήστε τη δωρεάν δοκιμή 14 ημερών σας σήμερα.",
+      "button": "Ξεκινήστε Δωρεάν Δοκιμή"
+    },
+    "navigation": {
+      "features": "Χαρακτηριστικά",
+      "pricing": "Τιμολόγηση",
+      "testimonials": "Μαρτυρίες"
+    },
+    "footer": {
+      "description": "Αυτοματοποιήστε τις απαντήσεις στα social media σας με AI που κατανοεί την επωνυμία σας.",
+      "product": "Προϊόν",
+      "company": "Εταιρεία",
+      "legal": "Νομικά",
+      "documentation": "Τεκμηρίωση",
+      "api": "API",
+      "about": "Σχετικά",
+      "blog": "Blog",
+      "careers": "Καριέρες"
+    }
+  },
   "auth": {
     "login": {
       "title": "Καλώς ήρθατε πίσω",
