--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -439,6 +439,9 @@
       "theme": "Θέμα",
       "lightMode": "Φωτεινή Λειτουργία",
       "darkMode": "Σκοτεινή Λειτουργία"
+    },
+    "pages": {
+      "description": "Συνδέστε και διαχειριστείτε τις σελίδες σας στο Facebook. Επιλέξτε ποιες σελίδες θέλετε να παρακολουθήσετε και να απαντάτε αυτόματα σε σχόλια."
     }
   }
 }
