Fixing Facebook comments and pages routes, redesigning the comments page and the home page, add features in comments page

--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -468,14 +468,19 @@
       "newComments": "νέα σχόλια",
       "showPost": "Εμφάνιση Δημοσίευσης",
       "hidePost": "Απόκρυψη Δημοσίευσης",
+      "viewPost": "Προβολή Δημοσίευσης",
       "originalPost": "Αρχική Δημοσίευση",
+      "close": "Κλείσιμο",
+      "commentBy": "Σχόλιο από",
       "fetchedSuccessfully": "{{count}} {{count, plural, one {σχόλιο} other {σχόλια}}} ανακτήθηκε με επιτυχία!",
       "lastFetched": "Τελευταία ανάκτηση",
       "never": "Ποτέ",
       "failedToFetch": "Αποτυχία ανάκτησης σχολίων",
       "errorLoading": "Σφάλμα φόρτωσης σχολίων",
       "failedToRefresh": "Αποτυχία ανανέωσης σχολίων",
-      "errorRefreshing": "Σφάλμα ανανέωσης σχολίων"
+      "errorRefreshing": "Σφάλμα ανανέωσης σχολίων",
+      "facebookPermissionError": "Το Facebook περιορίζει επί του παρόντος την πρόσβαση στα σχόλια για αυτή τη Σελίδα. Παρακαλώ επικοινωνήστε με την υποστήριξη εάν χρειάζεστε να ενεργοποιηθεί.",
+      "facebookPermissionBlock": "Το Facebook περιορίζει επί του παρόντος την πρόσβαση στα σχόλια για αυτή τη Σελίδα σε αυτή τη λειτουργία δοκιμής."
     }
   }
 }
