Enhance Facebook comments functionality: added hide/unhide and delete options, improved UI for comments display, and updated localization for new actions.

--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -464,6 +464,10 @@
       "daysAgo": "{{count}}η πριν",
       "replyWithAI": "Απάντηση με AI",
       "ignore": "Αγνόηση",
+      "hide": "Απόκρυψη",
+      "unhide": "Εμφάνιση",
+      "delete": "Διαγραφή",
+      "confirmDelete": "Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το σχόλιο; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
       "newComment": "νέο σχόλιο",
       "newComments": "νέα σχόλια",
       "showPost": "Εμφάνιση Δημοσίευσης",
