--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -464,6 +464,10 @@
       "daysAgo": "{{count}}d ago",
       "replyWithAI": "Reply with AI",
       "ignore": "Ignore",
+      "hide": "Hide",
+      "unhide": "Unhide",
+      "delete": "Delete",
+      "confirmDelete": "Are you sure you want to delete this comment? This action cannot be undone.",
       "newComment": "new comment",
       "newComments": "new comments",
       "showPost": "Show Post",
