Add comment delete and hide option
- Added "Delete" and "Hide" actions to each comment in the dashboard page.
- Users can now delete a comment or hide it from public view using the respective options in the UI.
- Updated state management and UI components to reflect comment deletion and hiding.
- Provided feedback to users upon successful or failed actions.

--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -458,6 +458,7 @@
       "pending": "σε αναμονή",
       "replied": "απαντήθηκε",
       "ignored": "αγνοήθηκε",
+      "hidden": "κρυφό",
       "justNow": "Μόλις τώρα",
       "minutesAgo": "{{count}}λ πριν",
       "hoursAgo": "{{count}}ω πριν",
@@ -468,6 +469,10 @@
       "unhide": "Εμφάνιση",
       "delete": "Διαγραφή",
       "confirmDelete": "Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το σχόλιο; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+      "deleteSelected": "Διαγραφή επιλεγμένων",
+      "selectAll": "Επιλογή όλων",
+      "deselectAll": "Αποεπιλογή όλων",
+      "confirmBulkDelete": "Είστε σίγουροι ότι θέλετε να διαγράψετε τα {{count}} επιλεγμένα σχόλια; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
       "newComment": "νέο σχόλιο",
       "newComments": "νέα σχόλια",
       "showPost": "Εμφάνιση Δημοσίευσης",
