--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -458,6 +458,7 @@
       "pending": "pending",
       "replied": "replied",
       "ignored": "ignored",
+      "hidden": "hidden",
       "justNow": "Just now",
       "minutesAgo": "{{count}}m ago",
       "hoursAgo": "{{count}}h ago",
@@ -468,6 +469,10 @@
       "unhide": "Unhide",
       "delete": "Delete",
       "confirmDelete": "Are you sure you want to delete this comment? This action cannot be undone.",
+      "deleteSelected": "Delete selected",
+      "selectAll": "Select all",
+      "deselectAll": "Deselect all",
+      "confirmBulkDelete": "Are you sure you want to delete {{count}} selected comment(s)? This action cannot be undone.",
       "newComment": "new comment",
       "newComments": "new comments",
       "showPost": "Show Post",
