--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -464,6 +464,17 @@
       "hoursAgo": "{{count}}ω πριν",
       "daysAgo": "{{count}}η πριν",
       "replyWithAI": "Απάντηση με AI",
+      "reply": "Απάντηση",
+      "replyPlaceholder": "Γράψτε μια απάντηση...",
+      "sendReply": "Απάντηση",
+      "sendingReply": "Αποστολή...",
+      "replyFailed": "Αποτυχία αποστολής απάντησης. Παρακαλώ δοκιμάστε ξανά.",
+      "cancelReply": "Ακύρωση",
+      "showReplies": "Εμφάνιση απαντήσεων",
+      "hideReplies": "Απόκρυψη απαντήσεων",
+      "loadingReplies": "Φόρτωση απαντήσεων...",
+      "noReplies": "Δεν υπάρχουν ακόμα απαντήσεις.",
+      "loadRepliesFailed": "Αποτυχία φόρτωσης απαντήσεων. Παρακαλώ δοκιμάστε ξανά.",
       "ignore": "Αγνόηση",
       "hide": "Απόκρυψη",
       "unhide": "Εμφάνιση",
