--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -464,6 +464,17 @@
       "hoursAgo": "{{count}}h ago",
       "daysAgo": "{{count}}d ago",
       "replyWithAI": "Reply with AI",
+      "reply": "Reply",
+      "replyPlaceholder": "Write a reply...",
+      "sendReply": "Reply",
+      "sendingReply": "Sending...",
+      "replyFailed": "Failed to send reply. Please try again.",
+      "cancelReply": "Cancel",
+      "showReplies": "Show replies",
+      "hideReplies": "Hide replies",
+      "loadingReplies": "Loading replies...",
+      "noReplies": "No replies yet.",
+      "loadRepliesFailed": "Failed to load replies. Please try again.",
       "ignore": "Ignore",
       "hide": "Hide",
       "unhide": "Unhide",
